<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.quote.mosaic.ui.game.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/shape_solid_white_rounded_corners">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/game_label_success_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/anim_trophy" />

        <TextView
            android:id="@+id/quote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@{String.format(@string/game_label_success_quote, viewModel.state.successQuote)}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            tools:text="«Через тернии к звёздам»‎" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.5"
            android:gravity="end"
            android:text="@{String.format(@string/game_label_success_author, viewModel.state.successAuthor)}"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quote"
            tools:visible="@{!TextUtils.isEmpty(viewModel.state.successAuthor)}" />

        <TextView
            android:id="@+id/youWin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:gravity="start"
            android:text="@string/game_label_success_you_win"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author" />

        <TextView
            android:id="@+id/coinReward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:gravity="start"
            android:text="@{String.format(@string/game_label_success_coins_reward, viewModel.state.successWinningCoins)}"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/youWin"
            app:layout_constraintStart_toStartOf="@+id/youWin"
            app:layout_constraintTop_toBottomOf="@+id/youWin"
            tools:text="- 5 монет за разгаданный уровень" />

        <TextView
            android:id="@+id/categoryReward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:gravity="start"
            android:text="@{String.format(@string/game_label_success_category_reward, viewModel.state.successWinningCategoryCoins)}"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/youWin"
            app:layout_constraintStart_toStartOf="@+id/youWin"
            app:layout_constraintTop_toBottomOf="@+id/coinReward"
            tools:text="- 10 монет за пройденную категорию"
            tools:visible="@{!TextUtils.isEmpty(viewModel.state.successWinningCategoryCoins)}" />

        <TextView
            android:id="@+id/categoryAchievement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:gravity="start"
            android:text="@{String.format(@string/game_label_success_category_achievement, viewModel.state.successWinningAchievement)}"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/youWin"
            app:layout_constraintStart_toStartOf="@+id/youWin"
            app:layout_constraintTop_toBottomOf="@+id/categoryReward"
            tools:text="- Достижение «Знаток всего на свете»"
            tools:visible="@{!TextUtils.isEmpty(viewModel.state.successWinningAchievement)}" />

        <TextView
            android:id="@+id/collectCoins"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_solid_green_rounded_corners"
            android:gravity="center"
            android:text="@string/game_button_success_collect_coins"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/youWin"
            app:layout_constraintStart_toStartOf="@+id/youWin"
            app:layout_constraintTop_toBottomOf="@+id/categoryAchievement" />

        <View
            android:id="@+id/centerPoint"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/collectCoins" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>